--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "calculadora",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
