--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.0.5"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
